# sinbad_rs

./: .gitignore  Cargo.toml
grammars/: amb.acc
src/: lib.rs  main.rs
src/sinbad/: mod.rs
