[package]
name = "sinbad_rs"
version = "0.1.0"
authors = ["Naveneetha Vasudevan <naveneetha@yahoo.com>"]
edition = "2018"

[lib]
name = "sinbad_rs"
path = "src/lib.rs"

[[bin]]
name = "sinbad_rs"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
